--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "mysql": "^2.17.1",
+    "firebase": "^6.2.4",
     "mysql2": "^1.6.5"
   },
   "devDependencies": {
