--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "firebase": "^6.2.4",
+    "firebase-admin": "^8.2.0",
     "mysql2": "^1.6.5"
   },
   "devDependencies": {
