--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "firebase": "^6.2.4",
     "firebase-admin": "^8.2.0",
+    "multer": "^1.4.2",
     "mysql2": "^1.6.5"
   },
   "devDependencies": {
