--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0-beta01'
