--- a/frontend/app/src/main/AndroidManifest.xml
+++ b/frontend/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.RegisterActivity"></activity>
+        <activity android:name=".ui.BookingActivity"></activity>
+        <activity android:name=".ui.ItemActivity" />
+        <activity android:name=".ui.RegisterActivity" />
         <activity android:name=".ui.HomeActivity" />
         <activity
             android:name=".ui.SplashActivity"
