--- a/frontend/app/src/main/AndroidManifest.xml
+++ b/frontend/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
 
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
 
+        <service android:name=".utils.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
         <activity android:name=".ui.BookingActivity"></activity>
         <activity android:name=".ui.ItemActivity" />
         <activity android:name=".ui.UserActivity" />
