--- a/frontend/app/src/main/AndroidManifest.xml
+++ b/frontend/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCA2rjEfiP4SXeXmwheYeHKR622gCZUVSk"/>
+            android:value="@string/GOOGLE_MAPS_KEY"/>
 
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
 
